# Sibyl-Memory

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark_longmemeval.py  benchmark_results.txt  docker-compose.yml
.github/workflows/: hf-mirror.yml
sibyl-memory-cli/: CHANGELOG.md  README.md  pyproject.toml
sibyl-memory-cli/src/sibyl_memory_cli/: __init__.py  _aesthetic.py  _banner.py  cli.py  migrate.py  setup.py
sibyl-memory-cli/tests/: conftest.py  test_hermes_install_args.py  test_init_perms_guard.py  test_memory_cmd_2026_06_16.py  test_migrate.py  test_migrate_adversarial.py  test_migrate_force_2026_06_05.py  test_orchestrator.py  test_prelaunch_fixes_2026_06_25.py  test_quality_fixes_2026_06_30.py  test_setup.py  test_status_stores_2026_06_11.py  test_superpatch_2026_07_05.py  test_wiring_fix.py
sibyl-memory-client/: CHANGELOG.md  README.md  poc_cache_bypass.py  pyproject.toml
sibyl-memory-client/src/sibyl_memory_client/: __init__.py  _capcheck.py  _heartbeat.py  client.py  exceptions.py  learning.py  lint.py  multi_record.py  schema.sql  storage.py
sibyl-memory-client/tests/: conftest.py  test_acer_stress_2026_05_30.py  test_adversarial_b005.py  test_anchor_resolver_2026_06_06.py  test_capcheck.py  test_dor_alpha_billing_search_2026_06_30.py  test_heartbeat_2026_06_16.py  test_kappa_fixes.py  test_learning.py  test_learning_redaction_2026_06_30.py  test_lint.py  test_negative_limit_guard.py  test_paraphrase_fallback_2026_06_19.py  test_phrasing_invariance_2026_06_28.py  test_prelaunch_audit_2026_06_25.py  test_proximity_rerank_2026_06_08.py  test_search_default_mode.py  test_set_reference_body_2026_06_11.py  test_smoke.py  test_superpatch_c3_2026_07_05.py  test_superpatch_c4_2026_07_05.py  test_superpatch_c5_2026_07_05.py  test_superpatch_hardening_2026_07_05.py  test_usersignal_fixes_2026_06_02.py
sibyl-memory-hermes/: CHANGELOG.md  README.md  pyproject.toml
sibyl-memory-hermes/src/sibyl_memory_hermes/: __init__.py  _aesthetic.py  _banner.py  credentials.py  install_plugin.py  provider.py
sibyl-memory-hermes/src/sibyl_memory_hermes/_hermes_plugin/: __init__.py  adapter.py  plugin.yaml
sibyl-memory-hermes/tests/: test_adapter.py  test_adapter_hardening_2026_06_25.py  test_audit_fixes_2026_06_30.py  test_coa_coercion_2026_05_30.py  test_install_hardening_2026_06_25.py  test_prefetch_fence.py  test_provider_path_2026_06_11.py  test_smoke.py  test_superpatch_h_2026_07_05.py
sibyl-memory-langgraph/: CHANGELOG.md  README.md  pyproject.toml  smoke.py
sibyl-memory-langgraph/src/sibyl_memory_langgraph/: __init__.py  store.py
sibyl-memory-langgraph/tests/: test_adv_fidelity.py  test_adv_fuzz.py  test_adv_scale.py  test_adv_security.py  test_async.py  test_conformance.py  test_crud.py  test_namespaces.py  test_search.py  test_store.py  test_superpatch_l_2026_07_05.py
sibyl-memory-mcp/: CHANGELOG.md  README.md  pyproject.toml
sibyl-memory-mcp/src/sibyl_memory_mcp/: __init__.py  __main__.py  server.py
sibyl-memory-mcp/tests/: test_arg_validation_leak_2026_06_02.py  test_coa_coercion_2026_05_30.py  test_err_toolerror_2026_06_05.py  test_first_use_tenant.py  test_injection_fence_2026_06_25.py  test_superpatch_2026_07_05.py
sibyl-plugin-schema/: 001_initial.sql  002_subscriptions_and_config.sql  003_email_codes.sql  004_pairing_codes.sql  005_bearer_tokens_and_account_links.sql  005_usage_log.sql
