[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sibyl-memory-cli"
version = "0.3.10"
description = "Command-line interface for the Sibyl Memory Plugin. `sibyl init` activates, `sibyl upgrade` runs the staker / subscription flow, `sibyl status` shows current tier and DB stats, `sibyl whoami` gives a one-line account summary, `sibyl devices` lists active devices and supports per-device revoke."
authors = [{ name = "SIBYL, Sibyl Labs LLC", email = "sibyl@sibyllabs.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sibyl", "memory", "cli", "agent", "hermes"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "sibyl-memory-client>=0.4.0",
  "sibyl-memory-hermes>=0.3.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
  "sibyl-memory-mcp>=0.1.2",
]
dev = [
  "pytest>=7.0",
]

[project.scripts]
sibyl = "sibyl_memory_cli.cli:main"

[project.urls]
Homepage = "https://sibyllabs.org/plugin"
Documentation = "https://docs.sibyllabs.org/memory/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sibyl_memory_cli*"]
