[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sibyl-memory-langgraph"
version = "0.1.0"
description = "LangGraph BaseStore integration backed by Sibyl Memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "sibyl-memory-client>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sibyl_memory_langgraph"]
